# zj-hooks

./: Cargo.toml  README.md  flake.nix  justfile  plugin-dev-workspace.kdl
.github/workflows/: release.yml
src/: config.rs  hook.rs  lib.rs
