[package]
name = "zj-hooks"
version = "0.1.2"
authors = ["Daniel Jankowski"]
edition = "2018"

[[bin]]
name = "zj-hooks"
bench = false

[lib]
bench = false

[features]
bench = []
tracing = []

[dependencies]
zellij-tile = "0.40.1"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
rstest = "0.23.0"
lazy_static = "1.5.0"
regex = "1.11.0"
miette = { version = "7.2.0", features = ["fancy"] }
thiserror = "1.0.64"
